--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -392,7 +392,7 @@ Furthermore, the application can encounter:
 	\item\textbf{SafeStreet Interfaces}
 	\begin{itemize}
 		\item \textbf{SafeStreets Logo:}\\
-		SafeStreets has a simple but explicative logo. It represents a street, because the main theme of the application concerns public roads. It also have a green tick, that represents the correct functioning and the safety of the streets.\\ 
+		SafeStreets has a simple but explicative logo. It represents a street, because the main theme of the application concerns public roads. It also has a green tick, that represents the correct functioning and the safety of the streets.\\ 
 		
 	\begin{figure}[h]
 	\includegraphics[scale=0.8]{Mockups/LogoSafeStreets.png}
@@ -416,7 +416,7 @@ Furthermore, the application can encounter:
 	\newpage
 	
 	\item \textbf{SafeStreets log-in page:}\\
-	This is the page a user sees when he downloads the app and opens it for the first time or when he has done a log-out. In this page there is the possibility to log-in (inserting username and password) or to sign-up. The user can also recover his credential using the funcion below the log-in button. When logged-in, the user will be redirected to the Home Page, that will be different for private users and authorities.
+	This is the page a user sees when he downloads the app and opens it for the first time or when he has done a log-out. In this page there is the possibility to log-in (inserting username and password) or to sign-up. The user can also recover his credentials using the funcion below the log-in button. When logged-in, the user will be redirected to the Home Page, that will be different for private users and authorities.
 	\begin{figure}[h]
 	\includegraphics[scale=0.7]{Mockups/log in.png}
 	\centering
@@ -457,7 +457,7 @@ Furthermore, the application can encounter:
 	
 	\item \textbf{SafeStreets private user sign-up (second part):}\\
 	
-	This is the second and last part of the private user's sign-up in the SafeStreets platform. Here the user has to fill the fields with his personal e-mail and his FC. Furthermore he has to choose  which category he belongs to and he can also indicate if this account will be created for a disable person or not. Finally, he has to insert his date of birth and optionally he can add the id of his drive license if he drives a vehicle that needs it. After doing that the sign-up is complete and the user will be redirected to the log-in page.
+	This is the second and last part of the private user's sign-up in the SafeStreets platform. Here the user has to fill the fields with his personal e-mail and his FC. Furthermore he has to choose  which category he belongs to (car driver, cyclist, motorcyclist, pedestrian, and so on) and he can also indicate if this account will be created for a disabled person or not. Finally, he has to insert his date of birth and optionally he can add the id of his drive license if he drives a vehicle that needs it. After doing that the sign-up is complete and the user will be redirected to the log-in page.
 	
 	\begin{figure}[h]
 	\includegraphics[scale=0.8]{Mockups/second sign up.png}
@@ -491,7 +491,7 @@ Furthermore, the application can encounter:
 
 
 		
-	This is the Home Page reserved to private users. It's a very basic interface, because we want that SafeStreet will be used by as many types of people as possible. Its functions are very easy to understand and they are the possibility to report a violation to the system, the chance to see which are the most reported streets in a selected area, the possibility to see the condition (in terms of safety) of a selected street, parking lot or area and the chance to check which are the vehicles that are reported the most. Finally there is also the log-out button.
+	This is the Home Page reserved to private users. It's a very basic interface, because we want that SafeStreets will be used by people of any age. Its functions are very easy to understand and they are: the possibility to report a violation to the system, the chance to see which are the most reported streets in a selected area, the possibility to see the condition (in terms of safety) of a selected street, parking lot or area and the chance to check which are the vehicles that are reported the most. Finally there is also the log-out button.
 
 	
 	
@@ -505,9 +505,9 @@ Furthermore, the application can encounter:
 	\newpage	
 	
 	
-	\item \textbf{SafeStreets Private User's Home Page:}\\
+	\item \textbf{SafeStreets Private User's Violation report:}\\
 
-	This is the first function presented in the Home Page. Here the user can report a violation that he has seen. The first field to fill is the one that allows the user to describe the violation, indicating the type of violation that he has seen (for example motorcycle parking areas occupied by cars, or traffic accidents, and so on). Then he has to indicate the date and the hour of the violation. Furthermore a user has to indicate (manually or with GPS signal) the street and the city of the violation and finally he can take a photograph of the violation (but this is mandatory).
+	This is the first function presented in the Home Page. Here the user can report a violation that he has seen. The first field to fill is the one that allows the user to describe the violation, indicating the type of violation that he/she has seen (for example motorcycle parking areas occupied by cars, or traffic accidents, and so on). Then he/she has to indicate the date and the hour of the violation. Furthermore a user has to indicate (manually or with GPS signal) the street and the city of the violation and finally he/she can take a photograph of the violation (this is mandatory).
 	
 	\begin{figure}[h]
 	\includegraphics[scale=0.8]{Mockups/Report a violation.png}
@@ -544,7 +544,7 @@ Furthermore, the application can encounter:
 	
 	\item \textbf{SafeStreets safest streets interface :}\\
 		
-	Here the user can check which is the condition of a selected street. He can specify the street manually, inserting its name and the name of the city. The street can also be retrieved automatically by the system with the GPS signal of the user's smartphone. Then the user has to insert a radius (expressed in KM) within which the system will provide the condition of the contained streets, highlighting the safest and the most dangerous ones.
+	Here the user can check which is the condition of a selected area. He can specify the street manually, inserting its name and the name of the city. The street can also be retrieved automatically by the system with the GPS signal of the user's smartphone. Then the user has to insert a radius (expressed in KM) within which the system will provide the condition of the contained streets, highlighting the safest and the most dangerous ones.
 	\begin{figure}[h]
 	\includegraphics[scale=0.8]{Mockups/safest streets.png}
 	\centering
@@ -575,7 +575,7 @@ Furthermore, the application can encounter:
 	
 	\item \textbf{SafeStreets Most dangerous vehicles :}\\
 	
-	Here the user can check which are the most reported vehicles in a selected street. The street can be inserted as in the previous functionalities, manually or automatically and it's also mandatory to indicate the maximum number of vehicles that will make up the chart. Then the user will have the list of the selected vehicles so that, for example, he will avoid to park near them, and so on.	
+	Here the user can check which are the most reported vehicles in an area near to a selected street. The street can be inserted as in the previous functionalities, manually or automatically and it's also mandatory to indicate the maximum number of vehicles that will make up the chart. Then the user will have the list of the selected vehicles so that, for example, he will avoid to park near them, and so on.	
 	
 	\begin{figure}[h]
 	\includegraphics[scale=0.8]{Mockups/Vehicles major violations.png}
@@ -593,7 +593,7 @@ Furthermore, the application can encounter:
 	\item \textbf{SafeStreets Municipality Home Page :}\\
 	
 	This is the Home Page reserved to the authorities. Here the municipality has the possibility to choose between four functionalities:
-	three are structured in the same way of the ones designed for the private users, and are the possibility to check the most reported streets and  the most reported vehicles in the city. The interfaces for the requests are the same than the ones for the users. The municipality also has the possibility to do a request to obtain suggestions in order to improve the quality of their service and, so, the safety of the city. 
+	three are structured in the same way of the ones designed for the private users, and are the possibility to check the most reported streets and  the most reported vehicles in the city. The third is the one to check the conditions of a selected area. The interfaces for the requests are the same than the ones for the users. The municipality also has the possibility to do a request to obtain suggestions in order to improve the quality of their service and, so, the safety of the city. 
 	
 	\begin{figure}[h]
 	\includegraphics[scale=0.8]{Mockups/Municipality main functionalities.png}
@@ -610,7 +610,7 @@ Furthermore, the application can encounter:
 	
 	\item \textbf{SafeStreets Municipality suggestions request :}\\
 	
-	Here the municipality can make a request in order to discover which are the suggestions provided by SafeStreets to enhance the safety of the city. The authorities have to insert the name of the city, or providing it using the GPS signal of their device.
+	Here the municipality can make a request in order to discover which are the suggestions provided by SafeStreets to enhance the safety of the city. The authorities have to insert the name of the city, or provide it using the GPS signal of their device.
 	
 	\begin{figure}[h]
 	\includegraphics[scale=0.8]{Mockups/Request for safety improvements.png}
@@ -654,13 +654,13 @@ The system will have to be designed for the most common smart-phones operating s
 	\item Android 
 	\item IOS
 \end{itemize}	
-The choice of that decision is the fact that these operating systems are the most common use ones.
+The choice of that decision is the fact that these operating systems are the most common used ones.
 	
 \subsubsection{Communication interfaces: }
-Each smart-phone that will use Safestreets will communicate thanks to the HTTPS protocol. We've chosen this protocol because thanks to it, it is possible to obtain a secure connection between nodes. Furthermore it is a very very common use protocol for the connections over internet. Because of this it is very likely to not have any problem related to the protocol from several points of view.
+Each smart-phone that will use Safestreets will communicate thanks to the HTTPS protocol. We've chosen this protocol because thanks to it, it is possible to obtain a secure connection between nodes. Furthermore it is a very commonly used protocol for the connections over internet. Because of this it is very likely not to have any problem related to the protocol from several points of view.
 \subsection{Functional Requirements:}
 \subsubsection{Use case diagrams: }
-In this subsection you will find the use case diagram. It is very important because it allows the reader to understand the flow of events between actors and the system itself. We have done two different use case diagrams to make them more explanatory and less confusing.
+Use case diagrams are very important because they allow the reader to understand the flow of events between actors and the system itself. We have done two different use case diagrams to make them more explanatory and less confusing.
 
 \begin{figure}[h]
 	\textbf{The first diagram:\\ \\}
@@ -683,16 +683,16 @@ In this subsection you will find the use case diagram. It is very important beca
 \textbf{From the private user point of view:}
 \end{center}
 
-\paragraph{Scenario 1:}Luigi is a middle-aged man which lives in a very busy area of Milan. This district is very known to be a zone with a strong lack of parking. People usually park their vehicles in illegal zone.
-Because of this, he has found  cars parked in front of his home gate several times. He has called the the municipality many times and now he is fed up about this situation. He usually calls the municipality with his phone but this process takes a lot of time because the telephone line is always busy. He would like the authorities to be have a better communication channel.\\Luckily he has downloaded an application called Safestreets. He has read in the description the fact that the application allow a user to report a violation via smart-phone.\\
-Thanks to this mobile application he is now able to save time in reporting violations. Furthermore, he has observed that  the municipality has started to do checks more frequently even without any report (because of the Safestreets suggestions to the municipality).
-\paragraph{Scenario 2:}Giovanni lives very close to the place where he works but he usually goes to work by car even if he would like to go there by bicycle. The problem is that the zone is very traffic and unfortunately accidents involving cyclists happen very often. Because of this, he does not feel like taking the risk.
-He notices an interesting application on the market called Safestreets. He is particularly interested in the function which suggest the most safety streets around the user from a point of view of the category in which the user has signed-up. This interest is caused by the idea of ​​being able to choose a route that minimizes the danger of making an accident with a car taking in consideration the suggested streets given by the application.\\
+\paragraph{Scenario 1:}Luigi is a middle-aged man who lives in a very busy area of Milan. This district is very known to be a zone with a strong lack of parking. People usually park their vehicles in illegal zones.
+Because of this, he has found  cars parked in front of his home gate several times. He has called the municipality many times and now he is fed up about this situation. He usually calls the municipality with his phone but this process takes a lot of time because the telephone line is always busy. He would like the authorities to have a better communication channel.\\Luckily he has downloaded an application called Safestreets. He has read in the description the fact that the application allows a user to report a violation via smart-phone.\\
+Thanks to this mobile application he is now able to save time in reporting violations. Furthermore, he has observed that  the municipality has started to check more frequently even without any report (because of the Safestreets suggestions to the municipality).
+\paragraph{Scenario 2:}Giovanni lives very close to the place where he works but he usually goes to work by car even if he would like to go there by bicycle. The problem is that the zone is very busy and unfortunately accidents involving cyclists happen very often. Because of this, he does not feel like taking the risk.
+He notices an interesting application on the market called Safestreets. He is particularly interested in the function which suggest the safest streets around the user from a point of view of the category in which the user has signed-up. This interest is caused by the idea of ​​being able to choose a route that minimizes the danger of making an accident against a car taking in consideration the suggested streets given by the application.\\
 Now, he is finally able to go to work by bicycle in a secure way.
-\paragraph{Scenario 3:}Andrea is a disabled person who strolls very often in his district. Unfortunately not all the roads are equipped with facilities for disabled people and also a lot of people parks their cars there.\\
-He has downloaded the application which suggest to him the streets which are more "easy"  and secure to be travelled for a person with his problem. The app allow Andrea to avoid roads which are almost sure to have cars parked on disabled facilities. He can compute himself the route from a place to another taking in consideration the suggestions given by the application. When he sees a violation he can report it to the municipality. Thanks to this feature Andrea is able to report violations, to do his strolls in the city almost in an autonomous way without the help of almost nobody. 
-\paragraph{Scenario 4:} An employee of an insurance has the task of understanding which are the most dangerous areas of a Milan in order to change the price of insurance. He does not know where find the data necessary to do this task.Furthermore it has just been decided by the boss that a funding a research would be too costly.\\
-Fortunately the insurance company has just downloaded the Safestreets applications which can be used to retrieve dangerous areas. Thanks to Safestreets the company saved a lot of money by doing a data search at no cost.
+\paragraph{Scenario 3:}Andrea is a disabled person who strolls very often in his district. Unfortunately not all the roads are equipped with facilities for disabled people and also a lot of people park their cars there.\\
+He has downloaded the application which suggest him the streets which are the most secure to be travelled for a person with his problem. The app allows Andrea to avoid roads where it is more probable to have cars parked on disabled facilities. He can compute himself the route from a place to another taking in consideration the suggestions given by the application. When he sees a violation he can report it to the municipality. Thanks to this feature Andrea is able to report violations, to do his strolls in the city almost in an autonomous way.
+\paragraph{Scenario 4:} An employee of an insurance has the task of understanding which are the most dangerous areas of Milan in order to change the price of insurance. He does not know where to find the data necessary to do this task.Furthermore it has just been decided by the boss that funding a research would be too costly.\\
+Fortunately the insurance company has just downloaded the Safestreets applications which can be used to retrieve dangerous areas. Thanks to Safestreets the company saved a lot of money by doing a free data search.
 
 \end{document}
 
