--- a/RASD/RASD.tex
+++ b/RASD/RASD.tex
@@ -87,7 +87,7 @@ The authorities will be informed of the violations through the municipality.
 
 \subsection{Scope:}
 In this section is introduced the so called "world and machine phenomena".\\
-We distinguish the world and the machine. The world is related to every phenomena that take place outside of the region of events that the system to be developed (called machine) is able to control or eventually observe. Instead, the machine is related to phenomena which happen inside the machine and so they're completely controllable. Some of the totality of the phenomena can be observed by the machine but they're controlled by the world and vice versa. These are called shared phenomena. In this section there will be described only the world phenomena and the shared one.The machine phenomena will be described later in the next chapters.
+We distinguish the world and the machine. The world is related to every phenomena that take place outside of the region of events that the system to be developed (called machine) is able to control or eventually observe. Instead, the machine is related to phenomena which happen inside the machine and so they are completely controllable. Some of the totality of the phenomena can be observed by the machine but they're controlled by the world and vice versa. These are called shared phenomena. In this section there will be described only the world phenomena and the shared one.The machine phenomena will be described later in the next chapters.
 
 \paragraph{World phenomena: }
 \subparagraph{From the user point of view: }
@@ -116,27 +116,27 @@ We distinguish the world and the machine. The world is related to every phenomen
     \item The user logs-out from the platform.
  	\item The user sends to the system a picture of a            	violation and all the other data related to it.
  	\item The user sends some data request to the system.
-	\item The municipality sends a data request to the system 		  in order to receive suggestion to improve the 				  safety 	of the streets.
+	\item The municipality sends a data request to the system 		  in order to receive suggestions to improve the 				  safety 	of the streets.
 	\item The municipality sends a data request to know what 			  are the vehicles that have committed the major 				  number of violations.
 \end{itemize}
 \subparagraph{Shared phenomena controlled by the machine and  			observed by the world: }
 \begin{itemize}
 	\item The user receives ,by the system,all the data 			related to the safest and most dangerous streets .
 	\item The user receives, by the system, all the data related to the vehicles that have committed the major number of violations.
-	\item The municipality receives suggestions from SafeStreets to provide a better 			safety on the streets.
+	\item The municipality receives suggestions from SafeStreets to make the city safer.
 	\item The municipality receives the list of the most 			dangerous vehicles .
+	\item The municipality receives violations reported by the users via Safestreets.
 	
 \end{itemize}
 \subparagraph{Machine phenomena: }
 \begin{itemize}
 	\item The system stores the user's data.
-	\item The system stores all the data about the 					municipality.
+	\item The system stores the data about the 					municipality.
 	\item The system stores all the data about the violation.
 	\item The system analyses the received picture in order to 	retrieve the car plate.
-	\item The system checks if the street in which the 				violation occur is an existing street.
-	\item The system runs an algorithm to retrieve suggestions from users' reports in order to provide them to the municipality.
-	\item The system refuse a request by the user because of 
-	insufficient data.
+	\item The system checks if the street in which the 				violation occurs is an existing one.
+	\item The system runs an algorithm to retrieve suggestions from users' reports and municipality data,it collects elaborated data and provides it to the municipality.
+	\item The system can refuse a request by the user because of insufficient data.
 \end{itemize}
 
 \subsection{Definitions, Acronyms, Abbreviations}
